--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -94,10 +94,12 @@
 
 .signup-recruiter{
 	background:orange;
+	width:165px;
 }
 
 .signup-candidate{
 	background:green;
+	width:165px;
 }
 /*
 .modal-body{
