--- a/recruit-gui/src/app/faq/faq.component.html
+++ b/recruit-gui/src/app/faq/faq.component.html
@@ -1,6 +1,9 @@
-<div>
-    <div class="centerdiv aboutpage">
-        <div class="center-table">
+<div class="page">
+
+	<!-- Nav options -->
+	<div class="nav-tabs-bar"></div>
+	
+    <div class="page-body">
             <div class="row">
             	 <div>
             	 	<div  class="subject-header">
@@ -100,6 +103,6 @@
 					</div>
             	 </div>	
 			</div>
-		</div>
+		
 	</div>
 </div>
