--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -1,31 +1,30 @@
-<div>
-    <div class="centerdiv aboutpage">
-        <div class="center-table">
-            <div class="row">
-            	 <div>
-            	 	<div  class="subject-header">
-            	 		<h1>Welcome to Arenella-ICT</h1>
-            	 		<h5>IT Candidate CV Database - IT Job board - IT Marketplace</h5>
-            	 	</div>
-            	 	
-           	 	 	<p>
-            	 	Arenella-ICT is a platform designed to bring together IT candidates which are actively looking for their next role, with the IT recruiters and hiring manager that 
-            	 	are looking to place them. 
-            	 	</p>
-            	 	<p>
-            	 	Arenella-ICT is however much more. It is also a meeting place to promote recruiter to recruiter collaboration by providing the opportunity to 
-            	 	work together to source and fill roles. We provide the tooling necessary to assist you with this collaboration.
-            	 	</p>
-            	 	<p>
-            	 	The site has been developed and refined to automate the tasks you undertake as much as possible. Be that searching for Candidate CVs to download or advertising 
-            	 	an open role you are trying to fill. The site employs algorithm and automation techniques to save you time to facilitate you in quickly reaching your goals.
-            	 	</p>
-            	 	<p>
-            	 	Arenella-ICT currently focuses on IT Candidates based in the Netherlands, Belgium, the UK and Ireland. The candidates we make available are both based in and have 
-            	 	the right to work in one of these locations. 
-            	 	</p>
-            	</div>
-	        </div>
-        </div>
+<div class="page">
+
+	<!-- Nav options -->
+	<div class="nav-tabs-bar"></div>
+	
+    <div class="page-body">
+    	<div>
+        	<div  class="subject-header">
+            	<h1>Welcome to Arenella-ICT</h1>
+            	<h5>IT Candidate CV Database - IT Job board - IT Marketplace</h5>
+            </div>
+           	<p>
+            Arenella-ICT is a platform designed to bring together IT candidates which are actively looking for their next role, with the IT recruiters and hiring manager that 
+            are looking to place them. 
+            </p>
+            <p>
+            Arenella-ICT is however much more. It is also a meeting place to promote recruiter to recruiter collaboration by providing the opportunity to 
+            work together to source and fill roles. We provide the tooling necessary to assist you with this collaboration.
+            </p>
+            <p>
+            The site has been developed and refined to automate the tasks you undertake as much as possible. Be that searching for Candidate CVs to download or advertising 
+            an open role you are trying to fill. The site employs algorithm and automation techniques to save you time to facilitate you in quickly reaching your goals.
+            </p>
+            <p>
+            Arenella-ICT currently focuses on IT Candidates based in the Netherlands, Belgium, the UK and Ireland. The candidates we make available are both based in and have 
+            the right to work in one of these locations. 
+            </p>
+		</div>
     </div>
 </div>
