--- a/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
+++ b/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
@@ -1,6 +1,9 @@
-<div class=".container m-2">
+<div class="page">
 
-<div class="container-div">
+	<!-- Nav options -->
+	<div class="nav-tabs-bar"></div>
+	
+	<div class="page-body">
 	
 	<div class="action-buttons">
 		<button class="btn btn-secondary arenella-btn" routerLink="/suggestions">Back</button>
