--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -58,8 +58,8 @@
 					</div>
 					<!-- New Candidate Stats -->
 					<div class="action-buttons" *ngIf="showNewCandidates">
-						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidates()" 		download>Show New Candidates</button>
-						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidateStats()" 	download>Show New Candidate Stats</button>
+						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidates()" 		download>New Candidates</button>
+						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidateStats()" 	download>Candidate Stats</button>
 					</div>	
 					<div class="statChartDiv {{statChartDivMobile}}">
 						<canvas  id="leftChart" >{{ leftChart }}</canvas>	
