--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
@@ -313,7 +313,7 @@ td{
 	padding-right:10px;
 	padding-left:10px;
 }
-
+/*
 .left-box-container{
 	float:left; 
 	width:100%; 
@@ -322,7 +322,7 @@ td{
 	margin-top:20px;
 	padding-left:20px;
 }
-
+*/
 .mobile-left-pane-container{
 	min-width:98%; 
 	max-width:98%;
