--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.css
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.css
@@ -1,17 +1,3 @@
-.centerdiv{
-    margin: 0 auto;
-    padding-left:10px;
-    padding-right:10px;
-    width:90%;
-}
-
-.center-table{
-    margin:0 auto;
-    margin-top:25px;
-}
-
-
-
 .tb-lbl{
 	padding-right:20px;
 }
@@ -75,4 +61,23 @@
 .rec-signup-info{
 	float:right;
 	max-width:900px;
+}
+
+.recruiter-signup-panel{
+	width:80%;
+	margin-top:50px;
+	margin-left:10%;
+	margin-right:10%;
+	margin-bottom:50px;
+}
+
+.recruiter-signup-box{
+	float:left;
+	margin-bottom:3	0px;
+}
+
+.recruiter-info-box{
+	float:right;
+	padding-bottom:50px;
+	max-width:720px;
 }
